--- a/Content/Home.htm
+++ b/Content/Home.htm
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" class="HomePage" style="mc-master-page: url('Resources\MasterPages\HomePage.flmsp');">
     <head>
         <link href="Resources/Stylesheets/StylesForHomePage.css" rel="stylesheet" type="text/css" />
@@ -8,9 +8,7 @@
             <div>
                 <div class="HomeHeroSection">
                     <div class="centered-text">
-                        <h1 class="whiteheader">Welcome to <MadCap:variable name="General.ProductName" />'s Online Help
-						</h1>
-                        <h2 class="whiteheader">The Place to Find Information, Tutorials, FAQs, and More</h2>
+                        <h1 class="whiteheader">Waldo was here</h1>
                     </div>
                 </div>
             </div>
